--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,8 +9,8 @@ main:
   - title: "Publications"
     url: /publications/
 
-  - title: "Projects"
-    url: /projects/
+#   - title: "Projects"
+#     url: /projects/
 
   #- title: "Blog"
   #  url: /year-archive/
