--- a/_config.yml
+++ b/_config.yml
@@ -102,7 +102,7 @@ author:
   instagram        :
   impactstory      :
   lastfm           :
-  linkedin         :
+  linkedin         : "owen-parsons-0886b0108"
   orcid            :
   pinterest        :
   soundcloud       :
